Fixed scrollbars

--- a/chrome/global/scrollbars.css
+++ b/chrome/global/scrollbars.css
@@ -14,6 +14,8 @@
 scrollbar {
   -moz-binding: url("chrome://global/content/bindings/scrollbar.xml#scrollbar");
   cursor: default;
+  min-width: 14px;
+  min-height: 14px;
 }
 
 /* ::::: slider ::::: */
